tests/compile-fail/interned-enum_data_name_conflict.rs
//@compile-fail
#![deny(warnings)]

#[salsa::interned(data = ConflictingData)]
enum ConflictingData<'db> {
    Variant(&'db ()),
}

fn main() {}
